--- a/lens_care.html
+++ b/lens_care.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Titan Lens Care | Premium Eyewear Maintenance</title>
+    <title>Lens Care | Premium Eyewear Maintenance</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Montserrat:wght@700;800;900&display=swap" rel="stylesheet">
     <style>
@@ -196,8 +196,8 @@
         }
 
         .logo-icon {
-            width: 4.5rem;
-            height: 4.5rem;
+            width: 4.4rem;
+            height: 3.9rem;
             background: linear-gradient(126deg, var(--primary), var(--secondary));
             border-radius: var(--radius-md);
             display: flex;
@@ -217,6 +217,8 @@
         .logo-text span {
             color: var(--secondary);
         }
+
+
 
         /* Navigation */
         .nav-menu {
@@ -395,7 +397,7 @@
             align-items: center;
             justify-content: center;
             margin-bottom: 1.5rem;
-            font-size: 2.5rem;
+            font-size: 0.8rem;
             font-weight: 900;
             color: white;
         }
@@ -841,34 +843,34 @@
                     <div class="brand-icon titan-icon">TITAN</div>
                     <h3>Titan Eyewear</h3>
                     <p>Advanced lens cleaning solutions specifically formulated for Titan's premium lens coatings and materials.</p>
-                    <a href="#" class="btn btn-secondary">View Products</a>
+                    <a href="titan.html" class="btn btn-secondary">View Products</a>
                 </div>
                 
                 <div class="brand-card animate-fadeIn delay-200">
                     <div class="brand-icon rayban-icon">RAY-BAN</div>
                     <h3>Ray-Ban Optics</h3>
                     <p>Professional-grade cleaning kits designed to maintain the optical clarity and integrity of Ray-Ban lenses.</p>
-                    <a href="#" class="btn btn-secondary">View Products</a>
+                    <a href="ray ban.html" class="btn btn-secondary">View Products</a>
                 </div>
                 <div class="brand-card animate-fadeIn delay-300">
                     <div class="brand-icon fastrack-icon">FIREBIRD</div>
                     <h3>FIREBIRD Frames</h3>
                     <p>Specialized maintenance products for FIREBIRD frames and lenses, ensuring lasting style and comfort.</p>
-                    <a href="#" class="btn btn-secondary">View Products</a>
+                    <a href="FIREBIRD Frames.html" class="btn btn-secondary">View Products</a>
                 </div>
 
                 <div class="brand-card animate-fadeIn delay-300">
                     <div class="brand-icon titan-icon">PARA</div>
                     <h3>Para Frames</h3>
                     <p>Specialized maintenance products for para frames and lenses, ensuring lasting style and comfort.</p>
-                    <a href="#" class="btn btn-secondary">View Products</a>
+                    <a href="Para Frames.html" class="btn btn-secondary">View Products</a>
                 </div>
                 
                 <div class="brand-card animate-fadeIn delay-300">
-                    <div class="brand-icon fastrack-icon">FASTRACK</div>
+                    <div class="brand-icon fastrack-icon"> Fastrack</div>
                     <h3>Fastrack Frames</h3>
                     <p>Specialized maintenance products for Fastrack frames and lenses, ensuring lasting style and comfort.</p>
-                    <a href="#" class="btn btn-secondary">View Products</a>
+                    <a href="fastrack.html" class="btn btn-secondary">View Products</a>
                 </div>
             </div>
         </div>
